<resources>
    <string name="game_list">My Games</string>
    <string name="action_settings">Settings</string>
    <string name="empty_state_Add_New_Game">\n\nClick on button at the bottom to add games</string>

    <string name="border">.</string>
    <string name="close_search">Close Search</string>
    <string name="search">Search</string>
    <string name="no_search_results">Nothing to show :(</string>

    <string name="release_date">Release Date</string>

    <string name="date_format">%1$s/%2$s/%3$s</string>

    <!--    Sorting-->
    <string name="sort_by">Sort by</string>
    <string name="sorting">Sorting </string>
    <string name="release_date_lh">Release Date (Asc)</string>
    <string name="release_date_hl">Release Date (Desc)</string>
    <string name="alphabetic_az">Alphabetic (A-Z)</string>
    <string name="alphabetic_za">Alphabetic (Z-A)</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="title_activity_generate_game">GenerateGame</string>

    <!--    Generate-->
    <string name="release_date_header">Release Date:</string>
    <string name="release_date_format">YYYY/MM/DD</string>
    <string name="game_url_header">Website:</string>
    <string name="game_url">http://[placeholdername].com</string>
    <string name="game_platform_header">Rating:</string>
    <string name="title_activity_game_info">GameInfo</string>
</resources>
