<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccentLight"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:tint="@color/colorPrimaryLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/llSearch"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/Toolbar"
            android:backgroundTint="@color/Toolbar"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:visibility="visible">

                <ImageButton
                    android:id="@+id/imgbtnCloseSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="10dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="@string/close_search"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/ic_arrow_left" />

                <SearchView
                    android:id="@+id/svSearch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="24dp"
                    android:closeIcon="@drawable/ic_close"
                    android:commitIcon="@drawable/ic_search"
                    android:paddingTop="4dp"
                    android:queryBackground="@android:color/transparent" />

            </LinearLayout>

            <ImageView
                android:id="@+id/ivBorder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="78dp"
                android:layout_marginTop="-4dp"
                android:layout_marginEnd="32dp"
                android:contentDescription="@string/border"
                android:scaleType="fitXY"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_line" />

        </LinearLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryLight"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:elevation="1dp"
            app:contentInsetStart="14dp"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleMarginStart="0dp"
            app:titleTextColor="#000000">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/sortLayout"
                style="@style/AppTheme.SortButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/btnSort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimaryLight"
                    android:fontFamily="sans-serif-medium"
                    android:minWidth="100dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="0dp"
                    android:text="@string/newest"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="@color/White"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/sorting"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btnSort"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_expand_more_white_24dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageButton
                android:id="@+id/ibtnSearch"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginEnd="32dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/search"
                android:src="@drawable/ic_search" />


        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tvNoResults"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_search_results"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvAddNewGame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/empty_state_Add_New_Game"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvGames"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>